--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview --port 4173 --host 0.0.0.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.2",
+    "axios": "^1.12.2",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
